// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contract > eth_accounts > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`contract > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability (provided key) 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": 9999999999,
    "hash": "0x594638e5e062340ffb82ba40803ebb7b0958358e0e94b585f5b2d9c8250a4a12",
    "id": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": false,
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > wallet_connect > behavior: \`createAccount\` capability > 
        [
          {
            "expiry": null,
            "hash": null,
            "permissions": undefined,
            "privateKey": [Function],
            "publicKey": null,
            "role": "admin",
            "type": "p256",
          },
        ]
       1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > wallet_connect > behavior: \`grantPermissions\` capability (no permissions) 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.permissions.calls
Value: []]
`;

exports[`contract > wallet_connect > behavior: \`grantPermissions\` capability (unlimited expiry) 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.expiry]
`;

exports[`contract > wallet_connect > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": null,
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > wallet_disconnect > default 1`] = `
[
  [Provider.DisconnectedError: The provider is disconnected from all chains.],
]
`;

exports[`contract > wallet_getAdmins > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`contract > wallet_getCapabilities > behavior: chainId 1`] = `
[
  "0x7a69",
]
`;

exports[`contract > wallet_getCapabilities > behavior: chainId 2`] = `
{
  "status": "supported",
}
`;

exports[`contract > wallet_getCapabilities > behavior: chainId 3`] = `false`;

exports[`contract > wallet_getCapabilities > behavior: chainId 4`] = `[]`;

exports[`contract > wallet_getCapabilities > behavior: chainId 5`] = `
{
  "supported": true,
}
`;

exports[`contract > wallet_getCapabilities > behavior: chainId 6`] = `
{
  "supported": false,
}
`;

exports[`contract > wallet_getCapabilities > default 1`] = `
[
  "0x7a69",
]
`;

exports[`contract > wallet_getCapabilities > default 2`] = `
{
  "status": "supported",
}
`;

exports[`contract > wallet_getCapabilities > default 3`] = `false`;

exports[`contract > wallet_getCapabilities > default 4`] = `0`;

exports[`contract > wallet_getCapabilities > default 5`] = `
{
  "supported": true,
}
`;

exports[`contract > wallet_getCapabilities > default 6`] = `
{
  "supported": false,
}
`;

exports[`contract > wallet_getPermissions > behavior: grant on connect > grant another > get after connect 1`] = `
[
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
    "key": {
      "publicKey": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
      "type": "secp256k1",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": undefined,
    },
  },
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
    "key": {
      "publicKey": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
      "type": "p256",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": [
        {
          "limit": "0x14d1120d7b160000",
          "period": "day",
          "token": null,
        },
      ],
    },
  },
]
`;

exports[`contract > wallet_getPermissions > behavior: grant on connect > grant another > get after connect 2`] = `
[
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
    "key": {
      "publicKey": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
      "type": "secp256k1",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": undefined,
    },
  },
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
    "key": {
      "publicKey": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
      "type": "p256",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": [
        {
          "limit": "0x14d1120d7b160000",
          "period": "day",
          "token": null,
        },
      ],
    },
  },
]
`;

exports[`contract > wallet_getPermissions > behavior: grant on connect > grant another > get after connect 3`] = `[]`;

exports[`contract > wallet_grantAdmin > default 1`] = `
{
  "id": "0x0000000000000000000000000000000000069420",
  "publicKey": "0x0000000000000000000000000000000000069420",
  "type": "address",
}
`;

exports[`contract > wallet_grantPermissions > behavior: no permissions 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.permissions.calls
Value: []]
`;

exports[`contract > wallet_grantPermissions > behavior: provided key 1`] = `
{
  "address": null,
  "capabilities": null,
  "chainId": null,
  "expiry": 9999999999,
  "id": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
  "key": {
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "type": "p256",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
  },
}
`;

exports[`contract > wallet_grantPermissions > behavior: provided key 2`] = `
{
  "address": null,
  "capabilities": null,
  "chainId": null,
  "expiry": 9999999999,
  "id": "0x0000000000000000000000000000000000000000",
  "key": {
    "publicKey": "0x0000000000000000000000000000000000000000",
    "type": "address",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
    "spend": [
      {
        "limit": "0x14d1120d7b160000",
        "period": "day",
      },
    ],
  },
}
`;

exports[`contract > wallet_grantPermissions > behavior: provided key 3`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": false,
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
      "spend": [
        {
          "limit": 1500000000000000000n,
          "period": "day",
        },
      ],
    },
    "prehash": false,
    "publicKey": null,
    "role": "session",
    "type": "address",
  },
]
`;

exports[`contract > wallet_grantPermissions > behavior: unlimited expiry 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.expiry]
`;

exports[`contract > wallet_grantPermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > wallet_revokeAdmin > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "prehash": false,
    "publicKey": null,
    "role": "admin",
    "type": "address",
  },
]
`;

exports[`contract > wallet_revokeAdmin > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > wallet_revokePermissions > behavior: revoke last admin key 1`] = `[RpcResponse.InternalError: cannot revoke permissions.]`;

exports[`contract > wallet_revokePermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`contract > wallet_revokePermissions > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": undefined,
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`contract > wallet_sendCalls > behavior: no calls.to 1`] = `
[RpcResponse.InvalidParamsError: Expected required property

Path: params.0.calls.0.to]
`;

exports[`contract > wallet_sendCalls > behavior: not provider-managed permission 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;

exports[`contract > wallet_sendCalls > behavior: permission does not exist 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;

exports[`rpcServer > eth_accounts > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`rpcServer > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability (provided key) 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": 9999999999,
    "hash": "0x594638e5e062340ffb82ba40803ebb7b0958358e0e94b585f5b2d9c8250a4a12",
    "id": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": false,
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > wallet_connect > behavior: \`createAccount\` + \`grantPermissions\` capability 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > wallet_connect > behavior: \`createAccount\` capability > 
        [
          {
            "expiry": null,
            "hash": null,
            "permissions": undefined,
            "privateKey": [Function],
            "publicKey": null,
            "role": "admin",
            "type": "p256",
          },
        ]
       1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > wallet_connect > behavior: \`grantPermissions\` capability (no permissions) 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.permissions.calls
Value: []]
`;

exports[`rpcServer > wallet_connect > behavior: \`grantPermissions\` capability (unlimited expiry) 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.capabilities.grantPermissions.expiry]
`;

exports[`rpcServer > wallet_connect > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {},
    "prehash": false,
    "privateKey": null,
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > wallet_disconnect > default 1`] = `
[
  [Provider.DisconnectedError: The provider is disconnected from all chains.],
]
`;

exports[`rpcServer > wallet_getAdmins > behavior: disconnected 1`] = `[Provider.DisconnectedError: The provider is disconnected from all chains.]`;

exports[`rpcServer > wallet_getCapabilities > behavior: chainId 1`] = `
[
  "0x7a69",
]
`;

exports[`rpcServer > wallet_getCapabilities > behavior: chainId 2`] = `
{
  "status": "supported",
}
`;

exports[`rpcServer > wallet_getCapabilities > behavior: chainId 3`] = `true`;

exports[`rpcServer > wallet_getCapabilities > behavior: chainId 4`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000000",
    "decimals": 18,
    "kind": "ETH",
    "nativeRate": null,
    "symbol": "ETH",
  },
  {
    "address": "0x8ce361602b935680e8dec218b820ff5056beb7af",
    "decimals": 18,
    "kind": "USDT",
    "nativeRate": null,
    "symbol": "EXP",
  },
]
`;

exports[`rpcServer > wallet_getCapabilities > behavior: chainId 5`] = `
{
  "supported": true,
}
`;

exports[`rpcServer > wallet_getCapabilities > behavior: chainId 6`] = `
{
  "supported": true,
}
`;

exports[`rpcServer > wallet_getCapabilities > default 1`] = `
[
  "0x7a69",
]
`;

exports[`rpcServer > wallet_getCapabilities > default 2`] = `
{
  "status": "supported",
}
`;

exports[`rpcServer > wallet_getCapabilities > default 3`] = `true`;

exports[`rpcServer > wallet_getCapabilities > default 4`] = `2`;

exports[`rpcServer > wallet_getCapabilities > default 5`] = `
{
  "supported": true,
}
`;

exports[`rpcServer > wallet_getCapabilities > default 6`] = `
{
  "supported": true,
}
`;

exports[`rpcServer > wallet_getPermissions > behavior: grant on connect > grant another > get after connect 1`] = `
[
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
    "key": {
      "publicKey": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
      "type": "secp256k1",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": undefined,
    },
  },
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
    "key": {
      "publicKey": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
      "type": "p256",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": [
        {
          "limit": "0x14d1120d7b160000",
          "period": "day",
          "token": null,
        },
      ],
    },
  },
]
`;

exports[`rpcServer > wallet_getPermissions > behavior: grant on connect > grant another > get after connect 2`] = `
[
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
    "key": {
      "publicKey": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
      "type": "secp256k1",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": undefined,
    },
  },
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
    "key": {
      "publicKey": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
      "type": "p256",
    },
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
          "to": null,
        },
      ],
      "spend": [
        {
          "limit": "0x14d1120d7b160000",
          "period": "day",
          "token": null,
        },
      ],
    },
  },
]
`;

exports[`rpcServer > wallet_getPermissions > behavior: grant on connect > grant another > get after connect 3`] = `
[
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
    "key": {
      "publicKey": "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
      "type": "secp256k1",
    },
    "permissions": {
      "calls": [
        {
          "signature": "0x1249c58b",
          "to": null,
        },
        {
          "signature": "0x32323232",
          "to": null,
        },
      ],
      "spend": [
        {
          "limit": "0x56bc75e2d63100000",
          "period": "year",
          "token": null,
        },
      ],
    },
  },
  {
    "address": null,
    "chainId": null,
    "expiry": 9999999999,
    "id": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
    "key": {
      "publicKey": "0xcafebabecafebabecafebabecafebabecafebabecafebabecafebabecafebabe",
      "type": "p256",
    },
    "permissions": {
      "calls": [
        {
          "signature": "0x1249c58b",
          "to": null,
        },
        {
          "signature": "0x32323232",
          "to": null,
        },
      ],
      "spend": [
        {
          "limit": "0x14d1120d7b160000",
          "period": "day",
          "token": null,
        },
        {
          "limit": "0x56bc75e2d63100000",
          "period": "day",
          "token": null,
        },
      ],
    },
  },
]
`;

exports[`rpcServer > wallet_grantAdmin > default 1`] = `
{
  "id": "0x0000000000000000000000000000000000069420",
  "publicKey": "0x0000000000000000000000000000000000069420",
  "type": "address",
}
`;

exports[`rpcServer > wallet_grantPermissions > behavior: no permissions 1`] = `
[RpcResponse.InvalidParamsError: Expected array length to be greater or equal to 1

Path: params.0.permissions.calls
Value: []]
`;

exports[`rpcServer > wallet_grantPermissions > behavior: provided key 1`] = `
{
  "address": null,
  "capabilities": null,
  "chainId": null,
  "expiry": 9999999999,
  "id": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
  "key": {
    "publicKey": "0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e",
    "type": "p256",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
  },
}
`;

exports[`rpcServer > wallet_grantPermissions > behavior: provided key 2`] = `
{
  "address": null,
  "capabilities": null,
  "chainId": null,
  "expiry": 9999999999,
  "id": "0x0000000000000000000000000000000000000000",
  "key": {
    "publicKey": "0x0000000000000000000000000000000000000000",
    "type": "address",
  },
  "permissions": {
    "calls": [
      {
        "signature": "mint()",
      },
    ],
    "spend": [
      {
        "limit": "0x14d1120d7b160000",
        "period": "day",
      },
    ],
  },
}
`;

exports[`rpcServer > wallet_grantPermissions > behavior: provided key 3`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": false,
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
      "spend": [
        {
          "limit": 1500000000000000000n,
          "period": "day",
        },
      ],
    },
    "prehash": false,
    "publicKey": null,
    "role": "session",
    "type": "address",
  },
]
`;

exports[`rpcServer > wallet_grantPermissions > behavior: unlimited expiry 1`] = `
[RpcResponse.InvalidParamsError: Expected number to be greater or equal to 1

Path: params.0.expiry]
`;

exports[`rpcServer > wallet_grantPermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > wallet_revokeAdmin > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "prehash": false,
    "publicKey": null,
    "role": "admin",
    "type": "address",
  },
]
`;

exports[`rpcServer > wallet_revokeAdmin > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > wallet_revokePermissions > behavior: revoke last admin key 1`] = `[RpcResponse.InternalError: cannot revoke admins.]`;

exports[`rpcServer > wallet_revokePermissions > default 1`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": {
      "calls": [
        {
          "signature": "mint()",
        },
      ],
    },
    "prehash": true,
    "privateKey": CryptoKey {},
    "publicKey": null,
    "role": "session",
    "type": "p256",
  },
]
`;

exports[`rpcServer > wallet_revokePermissions > default 2`] = `
[
  {
    "expiry": null,
    "hash": null,
    "id": null,
    "permissions": undefined,
    "prehash": false,
    "privateKey": {
      "privateKey": [Function],
    },
    "publicKey": null,
    "role": "admin",
    "type": "webauthn-p256",
  },
]
`;

exports[`rpcServer > wallet_sendCalls > behavior: no calls.to 1`] = `
[RpcResponse.InvalidParamsError: Expected required property

Path: params.0.calls.0.to]
`;

exports[`rpcServer > wallet_sendCalls > behavior: not provider-managed permission 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;

exports[`rpcServer > wallet_sendCalls > behavior: permission does not exist 1`] = `[RpcResponse.InternalError: permission (id: 0x86a0d77beccf47a0a78cccfc19fdfe7317816740c9f9e6d7f696a02b0c66e0e21744d93c5699e9ce658a64ce60df2f32a17954cd577c713922bf62a1153cf68e) does not exist.]`;
